log
Thu, May 15, 2025 11:57:31 AM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Thu, May 15, 2025 11:58:03 AM: 
 tests:  0|5
total_score: 0/70
b134480
Thu, May 15, 2025 12:57:32 PM: 
 sudoku.c | 46 +++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 41 insertions(+), 5 deletions(-)
Compilation failed
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
test.c:245:5: error: redefinition of 'main'
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:104:5: note: previous definition of 'main' with type 'int(int,  char **)'
  104 | int main( int argc, char *argv[] ){
      |     ^~~~
b13039b
Thu, May 15, 2025 12:58:09 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
ad3ee6c
Thu, May 15, 2025  1:00:12 PM: 
 sudoku.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
 tests:  3|4
total_score: 20/70
85a8138
Thu, May 15, 2025  1:09:13 PM: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  6|2
total_score: 45/70
b157764
Thu, May 15, 2025  1:10:00 PM: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
abd8cea
Thu, May 15, 2025  1:13:54 PM: 
 sudoku.c | 24 +++++++++++++++++++-----
 1 file changed, 19 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'DFS':
sudoku.c:114:17: error: implicit declaration of function 'createpila'; did you mean 'createList'? [-Wimplicit-function-declaration]
  114 |   Stack* pila = createpila();
      |                 ^~~~~~~~~~
      |                 createList
sudoku.c:114:17: error: initialization of 'Stack *' {aka 'List *'} from 'int' makes pointer from integer without a cast [-Wint-conversion]
sudoku.c:117:9: error: implicit declaration of function 'isEmpty'; did you mean 'is_empty'? [-Wimplicit-function-declaration]
  117 |   while(isEmpty(pila) != NULL){
      |         ^~~~~~~
      |         is_empty
sudoku.c:117:23: warning: comparison between pointer and integer
  117 |   while(isEmpty(pila) != NULL){
      |                       ^~
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
sudoku.c: In function 'is_final':
sudoku.c:111:1: warning: control reaches end of non-void function [-Wreturn-type]
  111 | }
      | ^
3c09933
Thu, May 15, 2025  1:14:16 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'DFS':
sudoku.c:114:17: error: implicit declaration of function 'createpila'; did you mean 'createList'? [-Wimplicit-function-declaration]
  114 |   Stack* pila = createpila();
      |                 ^~~~~~~~~~
      |                 createList
sudoku.c:114:17: error: initialization of 'Stack *' {aka 'List *'} from 'int' makes pointer from integer without a cast [-Wint-conversion]
sudoku.c:117:10: error: implicit declaration of function 'isEmpty'; did you mean 'is_empty'? [-Wimplicit-function-declaration]
  117 |   while(!isEmpty(pila)){
      |          ^~~~~~~
      |          is_empty
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
sudoku.c: In function 'is_final':
sudoku.c:111:1: warning: control reaches end of non-void function [-Wreturn-type]
  111 | }
      | ^
c3b6193
Thu, May 15, 2025  1:14:55 PM: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'DFS':
sudoku.c:118:17: error: implicit declaration of function 'createpila'; did you mean 'createList'? [-Wimplicit-function-declaration]
  118 |   Stack* pila = createpila();
      |                 ^~~~~~~~~~
      |                 createList
sudoku.c:118:17: error: initialization of 'Stack *' {aka 'List *'} from 'int' makes pointer from integer without a cast [-Wint-conversion]
sudoku.c:121:10: error: implicit declaration of function 'isEmpty'; did you mean 'is_empty'? [-Wimplicit-function-declaration]
  121 |   while(!isEmpty(pila)){
      |          ^~~~~~~
      |          is_empty
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
c4409eb
Thu, May 15, 2025  1:15:48 PM: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'DFS':
sudoku.c:120:17: error: implicit declaration of function 'createpila'; did you mean 'createList'? [-Wimplicit-function-declaration]
  120 |   Stack* pila = createpila();
      |                 ^~~~~~~~~~
      |                 createList
sudoku.c:120:17: error: initialization of 'Stack *' {aka 'List *'} from 'int' makes pointer from integer without a cast [-Wint-conversion]
sudoku.c:123:10: error: implicit declaration of function 'isEmpty'; did you mean 'is_empty'? [-Wimplicit-function-declaration]
  123 |   while(!isEmpty(pila)){
      |          ^~~~~~~
      |          is_empty
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
0cecd3a
Thu, May 15, 2025  1:16:03 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'DFS':
sudoku.c:123:10: error: implicit declaration of function 'isEmpty'; did you mean 'is_empty'? [-Wimplicit-function-declaration]
  123 |   while(!isEmpty(pila)){
      |          ^~~~~~~
      |          is_empty
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
2ee0106
Thu, May 15, 2025  1:16:26 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'DFS':
sudoku.c:123:10: error: implicit declaration of function 'is_Empty'; did you mean 'is_empty'? [-Wimplicit-function-declaration]
  123 |   while(!is_Empty(pila)){
      |          ^~~~~~~~
      |          is_empty
test.c: At top level:
test.c:7:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
57adeb2
Thu, May 15, 2025  1:16:40 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|1
total_score: 60/70
4213723
